--- a/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.html
+++ b/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.html
@@ -1,1 +1,46 @@
-<p>exchange-order-list works!</p>
+<mat-spinner style="margin:0 auto;" *ngIf="isLoadingData, else TableTemplate"></mat-spinner>
+<ng-template #TableTemplate>
+    <div class="example-container mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+            <!--- Note that these columns can be defined in any order.
+                  The actual rendered columns are set as a property on the row definition" -->
+
+            <!-- Position Column -->
+            <ng-container matColumnDef="uuid">
+                <th mat-header-cell *matHeaderCellDef> Uuid</th>
+                <td mat-cell *matCellDef="let element">
+                    <a [routerLink]="['/exchange/exchange-order',element.uuid]" class="primary">
+                        {{element.uuid}}
+                    </a>
+                </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="userId">
+                <th mat-header-cell *matHeaderCellDef> User name</th>
+                <td mat-cell *matCellDef="let element"> {{element.user.email}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="numberOfBook">
+                <th mat-header-cell *matHeaderCellDef> Number Of Books</th>
+                <td mat-cell *matCellDef="let element"> {{element.numberOfBook}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> Status</th>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef> Created Date</th>
+                <td mat-cell *matCellDef="let element"> {{element.createdAt | date}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</ng-template>
