--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,13 +1,17 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
+               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item [routerLink]="'overview'">
+        Overview
+      </a>
+      <a mat-list-item [routerLink]="'users'">User</a>
+      <a mat-list-item [routerLink]="'exchange'">Exchange</a>
+      <a mat-list-item [routerLink]="'books'">Books</a>
+      <a mat-list-item [routerLink]="'hub'">Hub</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -16,11 +20,17 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        (click)="drawer.toggle()">
+        <mat-icon aria-label="Side nav toggle icon" fontIcon="menu">menu</mat-icon>
       </button>
       <span>admin-dashboard</span>
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="signOut()">
+        Log Out
+      </button>
     </mat-toolbar>
     <!-- Add Content Here -->
     <!--This is where my after get projectId-->
