--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,45 +1,51 @@
-<mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer class="sidenav" fixedInViewport
-               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-               [mode]="(isHandset$ | async) ? 'over' : 'side'"
-               [opened]="(isHandset$ | async) === false">
-    <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item [routerLink]="'overview'">
-        Overview
-      </a>
-      <a mat-list-item [routerLink]="'users'">User</a>
-      <a mat-list-item [routerLink]="'exchange'">Exchange</a>
-      <a mat-list-item [routerLink]="'books'">Books</a>
-      <a mat-list-item [routerLink]="'hub'">Hub</a>
-    </mat-nav-list>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="drawer.toggle()">
-        <mat-icon aria-label="Side nav toggle icon" fontIcon="menu">menu</mat-icon>
-      </button>
-      <span>admin-dashboard</span>
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="signOut()">
-        Log Out
-      </button>
-    </mat-toolbar>
-    <!-- Add Content Here -->
-    <!--This is where my after get projectId-->
-    <ng-container>
-      <ng-container *ngTemplateOutlet="template"></ng-container>
-    </ng-container>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-sidenav-container fullscreen>
+    <mat-sidenav #sidenav>
+        <mat-nav-list (click)="sidenav.close()">
+            <a mat-list-item [routerLink]="'overview'">
+                Overview
+            </a>
+            <a mat-list-item [routerLink]="'users'">User</a>
+            <a mat-list-item [routerLink]="'exchange'">Exchange</a>
+            <a mat-list-item [routerLink]="'books'">Books</a>
+            <a mat-list-item [routerLink]="'hub'">Hub</a>
+        </mat-nav-list>
+    </mat-sidenav>
 
-<ng-template #template>
-  <router-outlet></router-outlet>
-</ng-template>
+
+    <mat-toolbar color="primary">
+
+        <button mat-icon-button (click)="sidenav.open()">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <a mat-button [matMenuTriggerFor]="dropdown">
+            Screens
+        </a>
+
+        <mat-menu #dropdown>
+
+            <button mat-menu-item routerLink="/">Courses</button>
+
+            <button mat-menu-item routerLink="/about">About</button>
+
+        </mat-menu>
+
+
+        <a mat-button>
+            <mat-icon>person_add</mat-icon>
+            Register
+        </a>
+
+        <a mat-button>
+            <mat-icon>account_circle</mat-icon>
+            Login
+        </a>
+
+    </mat-toolbar>
+
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+
+
+</mat-sidenav-container>
