--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,17 +1,21 @@
-.sidenav-container {
-  height: 100%;
+@import "src/assets/color/color-variables.scss";
+
+>>> body {
+    margin: 0;
 }
 
-.sidenav {
-  width: 200px;
+main {
+    margin: 30px;
 }
 
-.sidenav .mat-toolbar {
-  background: inherit;
+mat-toolbar a {
+    color: white;
 }
 
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+.container {
+    border: 1px solid $color-grey-650-20;
+    height: 100vh;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 25px 50px;
 }
