--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,97 +1,107 @@
-/* You can add global styles to this file, and also import other style files */
-html, body {
-  height: 100%;
+
+@use '@angular/material' as mat;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-elevation-z7 {
+    box-shadow: 0 4px 5px -2px #0003, 0 7px 10px 1px #00000024, 0 2px 16px 1px #0000001f;
 }
 
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
 
-:root {
-  $color-regal-blue-100: #00427a;
-  $color-royal-blue-100: #357ede;
-  $color-royal-blue-50: rgba(53, 126, 222, 0.5);
-  $color-royal-blue-25: rgba(53, 126, 222, 0.25);
-  $color-royal-blue-20: rgba(53, 126, 222, 0.2);
-  $color-royal-blue-15: rgba(53, 126, 222, 0.15);
-  $color-royal-blue-10: rgba(53, 126, 222, 0.1);
-  $color-royal-blue-8: rgba(53, 126, 222, 0.08);
-  $color-royal-blue-5: rgba(53, 126, 222, 0.05);
-  $color-royal-blue-2: rgba(53, 126, 222, 0.02);
-  $color-mystic-500-100: #e1e5ed;
-  $color-mystic-400-7: rgba(89, 131, 174, 0.07);
-  $color-mystic-300-100: #fafbfc;
-  $color-black-100: #000000;
-  $color-black-80: rgba(0, 0, 0, 0.8);
-  $color-black-50: rgba(0, 0, 0, 0.5);
-  $color-black-5: rgba(0, 0, 0, 0.05);
-  $color-black-1: rgba(0, 0, 0, 0.01);
-  $color-white-100: #ffffff;
-  $color-white-75: rgba(255, 255, 255, 0.75);
-  $color-white-50: rgba(255, 255, 255, 0.5);
-  $color-white-15: rgba(255, 255, 255, 0.15);
-  $color-grey-850-100: #333333;
-  $color-grey-800-100: #454545;
-  $color-grey-750-100: #666666;
-  $color-grey-750-10: rgba(102, 102, 102, 0.1);
-  $color-grey-750-20: rgba(102, 102, 102, 0.2);
-  $color-grey-700-100: #777777;
-  $color-grey-650-100: #888888;
-  $color-grey-650-20: rgba(136, 136, 136, 0.2);
-  $color-grey-650-15: rgba(136, 136, 136, 0.15);
-  $color-grey-650-10: rgba(136, 136, 136, 0.1);
-  $color-grey-600-100: #a7a7a7;
-  $color-grey-550-100: #aaaaaa;
-  $color-grey-550-20: rgba(170, 170, 170, 0.2);
-  $color-grey-550-10: rgba(170, 170, 170, 0.1);
-  $color-grey-500-100: #bbbbbb;
-  $color-grey-450-100: #cccccc;
-  $color-grey-400-100: #d3d3d3;
-  $color-grey-350-100: #e3e3e3;
-  $color-grey-300-100: #eaeaea;
-  $color-grey-300-75: rgba(234, 234, 234, 0.75);
-  $color-grey-250-100: #eeeeee;
-  $color-grey-200-100: #f0f0f0;
-  $color-grey-150-100: #f8f8f8;
-  $color-grey-100-100: #fafafa;
-  $color-apple-100: #40c646;
-  $color-apple-50: rgba(64, 198, 70, 0.5);
-  $color-apple-25: rgba(64, 198, 70, 0.25);
-  $color-apple-15: rgba(64, 198, 70, 0.15);
-  $color-apple-10: rgba(64, 198, 70, 0.1);
-  $color-apple-5: rgba(64, 198, 70, 0.05);
-  $color-red-orange-100: #ff2633;
-  $color-red-orange-50: rgba(255, 38, 51, 0.5);
-  $color-red-orange-25: rgba(255, 38, 51, 0.25);
-  $color-red-orange-15: rgba(255, 38, 51, 0.15);
-  $color-red-orange-10: rgba(255, 38, 51, 0.1);
-  $color-red-orange-5: rgba(255, 38, 51, 0.05);
-  $color-cerulean-100: #0095da;
-  $color-cerulean-50: rgba(0, 149, 218, 0.5);
-  $color-cerulean-25: rgba(0, 149, 218, 0.25);
-  $color-cerulean-15: rgba(0, 149, 218, 0.15);
-  $color-cerulean-10: rgba(0, 149, 218, 0.1);
-  $color-cerulean-5: rgba(0, 149, 218, 0.05);
-  $color-web-orange-100: #ffa800;
-  $color-web-orange-50: rgba(255, 168, 0, 0.5);
-  $color-web-orange-25: rgba(255, 168, 0, 0.25);
-  $color-web-orange-15: rgba(255, 168, 0, 0.15);
-  $color-web-orange-10: rgba(255, 168, 0, 0.1);
-  $color-web-orange-5: rgba(255, 168, 0, 0.05);
-  $color-pizazz-100: #ff8a00;
-  $color-pizazz-20: rgba(255, 138, 0, 0.2);
-  $color-pizazz-15: rgba(255, 138, 0, 0.15);
-  $color-pizazz-10: rgba(255, 138, 0, 0.1);
-  $color-electric-violet-100: #5300da;
-  $color-electric-violet-20: rgba(83, 0, 218, 0.2);
-  $color-electric-violet-15: rgba(83, 0, 218, 0.15);
-  $color-electric-violet-10: rgba(83, 0, 218, 0.1);
-  $color-clown-red-100: #ff4138;
-  $color-clown-red-20: rgba(255, 65, 56, 0.2);
-  $color-clown-red-15: rgba(255, 65, 56, 0.15);
-  $color-clown-red-10: rgba(255, 65, 56, 0.1);
-  $color-green-100: #00b907;
-  $color-fern-100: #5cb85c;
-  $color-fern-50: rgba(92, 184, 92, 0.5);
+@include mat.core();
+
+$dark-primary-text: rgba(black, 0.87);
+
+$light-primary-text: white;
+
+$mat-primary: (
+    50: #e8eaf6,
+    100: #c5cae9,
+    200: #9fa8da,
+    300: #7986cb,
+    400: #5c6bc0,
+    500: #3f51b5,
+    600: #3949ab,
+    700: #303f9f,
+    800: #283593,
+    900: #1a237e,
+    A100: #8c9eff,
+    A200: #536dfe,
+    A400: #3d5afe,
+    A700: #304ffe,
+    contrast: (
+        50: $dark-primary-text,
+        100: $dark-primary-text,
+        200: $dark-primary-text,
+        300: $light-primary-text,
+        400: $light-primary-text,
+        500: $light-primary-text,
+        600: $light-primary-text,
+        700: $light-primary-text,
+        800: $light-primary-text,
+        900: $light-primary-text,
+        A100: $dark-primary-text,
+        A200: $light-primary-text,
+        A400: $light-primary-text,
+        A700: $light-primary-text,
+    )
+);
+
+$mat-accent: (
+    50: #fce4ec,
+    100: #f8bbd0,
+    200: #f48fb1,
+    300: #f06292,
+    400: #ec407a,
+    500: #e91e63,
+    600: #d81b60,
+    700: #c2185b,
+    800: #ad1457,
+    900: #880e4f,
+    A100: #ff80ab,
+    A200: #ff4081,
+    A400: #f50057,
+    A700: #c51162,
+    contrast: (
+        50: $dark-primary-text,
+        100: $dark-primary-text,
+        200: $dark-primary-text,
+        300: $dark-primary-text,
+        400: $dark-primary-text,
+        500: $light-primary-text,
+        600: $light-primary-text,
+        700: $light-primary-text,
+        800: $light-primary-text,
+        900: $light-primary-text,
+        A100: $dark-primary-text,
+        A200: $light-primary-text,
+        A400: $light-primary-text,
+        A700: $light-primary-text,
+    )
+);
+
+
+
+$primary: mat.define-palette($mat-primary, 500);
+
+$accent: mat.define-palette($mat-accent, A200, A100, A400);
+
+$theme: mat.define-light-theme((
+    color: (
+        primary: $primary,
+        accent: $accent,
+    ),
+    typography: mat.define-typography-config(),
+    density: 0,
+));
+
+@include mat.all-component-themes($theme);
+
+@import "./mixins";
+
+//@include responsive-dialogs();
+
+.highlight-date {
+    background: red;
 }
