--- a/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.scss
+++ b/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.scss
@@ -1,4 +1,5 @@
 .courses-panel {
+    text-align: center;
     max-width: 460px;
     margin: 0 auto;
 }
@@ -27,4 +28,37 @@ h2 {
 
 .spinner-container mat-spinner {
     margin: 130px auto 0 auto;
+}
+.table-container {
+    margin-top: 15px;
+}
+
+.course-thumbnail {
+    width: 150px;
+    margin: 20px auto 0 auto;
+    display: block;
+}
+
+.scrolling-container {
+
+}
+
+.collapsed-detail {
+    display: none;
+}
+
+.orders-table {
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    tr:hover {
+        background: whitesmoke;
+        cursor: pointer;
+    }
+}
+
+mat-paginator {
+    width: 400px;
+    padding-bottom: 10px;
+    margin-bottom: 100px;
 }
