--- a/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.html
+++ b/src/app/layout/exchange/exchange-order-list/exchange-order-list.component.html
@@ -35,9 +35,9 @@
                         <th mat-header-cell *matHeaderCellDef> Status</th>
                         <td mat-cell *matCellDef="let element">
                             <app-badge *ngIf="element.status == 'NEW'"
-                                       [type]="'success'">{{element.status}}</app-badge>
+                                       [type]="'success'" [title]="element.status"></app-badge>
                             <app-badge *ngIf="element.status != 'NEW'"
-                                       [type]="'process'">{{element.status}}</app-badge>
+                                       [type]="'process'" [title]="element.status"></app-badge>
                         </td>
                     </ng-container>
 
@@ -90,9 +90,13 @@
                         <th mat-header-cell *matHeaderCellDef> Status</th>
                         <td mat-cell *matCellDef="let element">
                             <app-badge *ngIf="element.status == 'NEW'"
-                                       [type]="'success'">{{element.status}}</app-badge>
+                                       [type]="'success'"
+                                       [title]="element.status"
+                            ></app-badge>
                             <app-badge *ngIf="element.status != 'NEW'"
-                                       [type]="'process'">{{element.status}}</app-badge>
+                                       [type]="'process'"
+                                       [title]="element.status"
+                            ></app-badge>
                         </td>
                     </ng-container>
 
