--- a/src/app/shared/components/badge/badge.component.html
+++ b/src/app/shared/components/badge/badge.component.html
@@ -1,8 +1,6 @@
 <div class="badge upper-badge" [class]="type">
-    <div class="content">
+    <div class="content" style="padding: 0">
         <div class="status"></div>
-        <span>
-            <ng-content></ng-content>
-        </span>
+        <span>{{title || badgeTitle}}</span>
     </div>
 </div>
