finish exchange page

--- a/src/app/layout/exchange/exchange-order-detail/exchange-order-detail.component.html
+++ b/src/app/layout/exchange/exchange-order-detail/exchange-order-detail.component.html
@@ -23,7 +23,7 @@
                         >
                             <span>Re-Evaluate</span>
                         </button>
-                        <button mat-raised-button color="accent" (click)="confirmAddPoint()"
+                        <button mat-raised-button color="primary" (click)="confirmAddPoint()"
                         >
                             <span>Confirmed</span>
                         </button>
