--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -7,6 +7,7 @@
             <a mat-list-item [routerLink]="'users'">User</a>
             <a mat-list-item [routerLink]="'exchange'">Exchange</a>
             <a mat-list-item [routerLink]="'books'">Books</a>
+            <a mat-list-item [routerLink]="'old-books'">Old Books</a>
             <a mat-list-item [routerLink]="'hub'">Hub</a>
         </mat-nav-list>
     </mat-sidenav>
