--- a/src/app/layout/old-book/old-book-list/old-book-list.component.html
+++ b/src/app/layout/old-book/old-book-list/old-book-list.component.html
@@ -1,51 +1,103 @@
 <div class="course-panel">
     <div class="header">
-        <h2 class="title">Order Exchange</h2>
+        <h2 class="title">Old Book Management</h2>
     </div>
     <div class="spinner-container" *ngIf="isLoadingData">
         <mat-spinner></mat-spinner>
     </div>
 
-    <div class="table-container">
-        <table mat-table [dataSource]="dataSource" class="orders-table mat-elevation-z10">
-            <ng-container matColumnDef="uuid">
-                <th mat-header-cell *matHeaderCellDef> Uuid</th>
-                <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['/old-books/old-book-detail', element.uuid]" class="primary">
-                        {{element.uuid}}
-                    </a>
-                </td>
-            </ng-container>
+    <mat-tab-group *ngIf="!isLoadingData">
+        <mat-tab label="Available At Hub">
+            <mat-form-field floatLabel="never" class="search-box">
+                <input matInput placeholder="Search">
+            </mat-form-field>
+            <div class="table-container">
+                <table mat-table [dataSource]="dataSourceAtHub" class="orders-table mat-elevation-z10">
+                    <ng-container matColumnDef="uuid">
+                        <th mat-header-cell *matHeaderCellDef> Uuid</th>
+                        <td mat-cell *matCellDef="let element">
+                            <a [routerLink]="['/old-books/old-book-detail', element.uuid]" class="primary">
+                                {{element.uuid}}
+                            </a>
+                        </td>
+                    </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element"> {{element.virtualBook.name}} </td>
-            </ng-container>
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef>Name</th>
+                        <td mat-cell *matCellDef="let element"> {{element.virtualBook.name}} </td>
+                    </ng-container>
 
-            <!-- Virtual Book Id Column -->
-            <ng-container matColumnDef="virtualBookId">
-                <th mat-header-cell *matHeaderCellDef>Virtual Book Uuid</th>
-                <td mat-cell *matCellDef="let element"> {{element.virtualBookId}} </td>
-            </ng-container>
+                    <!-- Virtual Book Id Column -->
+                    <ng-container matColumnDef="virtualBookId">
+                        <th mat-header-cell *matHeaderCellDef>Virtual Book Uuid</th>
+                        <td mat-cell *matCellDef="let element"> {{element.virtualBookId}} </td>
+                    </ng-container>
 
-            <!-- Point Column -->
-            <ng-container matColumnDef="point">
-                <th mat-header-cell *matHeaderCellDef>Point</th>
-                <td mat-cell *matCellDef="let element"> {{element.point}} </td>
-            </ng-container>
+                    <!-- Point Column -->
+                    <ng-container matColumnDef="point">
+                        <th mat-header-cell *matHeaderCellDef>Point</th>
+                        <td mat-cell *matCellDef="let element"> {{element.point}} </td>
+                    </ng-container>
 
-            <ng-container matColumnDef="noRecord">
-                <td mat-footer-cell *matFooterCellDef>No Old Book found.</td>
-            </ng-container>
+                    <ng-container matColumnDef="noRecord">
+                        <td mat-footer-cell *matFooterCellDef>No Old Book found.</td>
+                    </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-            <ng-template [ngIf]="dataSource.length === 0">
-                <tr mat-footer-row *matFooterRowDef="['noRecord']"></tr>
-            </ng-template>
-        </table>
+                    <ng-template [ngIf]="dataSourceAtHub.length === 0">
+                        <tr mat-footer-row *matFooterRowDef="['noRecord']"></tr>
+                    </ng-template>
+                </table>
 
-    </div>
+            </div>
+        </mat-tab>
+
+        <mat-tab label="Sold">
+            <div class="table-container">
+                <table mat-table [dataSource]="dataSourceSold" class="orders-table mat-elevation-z10">
+                    <ng-container matColumnDef="uuid">
+                        <th mat-header-cell *matHeaderCellDef> Uuid</th>
+                        <td mat-cell *matCellDef="let element">
+                            <a [routerLink]="['/old-books/old-book-detail', element.uuid]" class="primary">
+                                {{element.uuid}}
+                            </a>
+                        </td>
+                    </ng-container>
+
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef>Name</th>
+                        <td mat-cell *matCellDef="let element"> {{element.virtualBook.name}} </td>
+                    </ng-container>
+
+                    <!-- Virtual Book Id Column -->
+                    <ng-container matColumnDef="virtualBookId">
+                        <th mat-header-cell *matHeaderCellDef>Virtual Book Uuid</th>
+                        <td mat-cell *matCellDef="let element"> {{element.virtualBookId}} </td>
+                    </ng-container>
+
+                    <!-- Point Column -->
+                    <ng-container matColumnDef="point">
+                        <th mat-header-cell *matHeaderCellDef>Point</th>
+                        <td mat-cell *matCellDef="let element"> {{element.point}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="noRecord">
+                        <td mat-footer-cell *matFooterCellDef>No Old Book found.</td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                    <ng-template [ngIf]="dataSourceSold.length === 0">
+                        <tr mat-footer-row *matFooterRowDef="['noRecord']"></tr>
+                    </ng-template>
+                </table>
+
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
