--- a/src/app/layout/hub/hub-list/hub-list.component.html
+++ b/src/app/layout/hub/hub-list/hub-list.component.html
@@ -1,1 +1,22 @@
-<p>hub-list works!</p>
+<div class="card-container">
+    <div class="card" *ngFor="let hub of hubList">
+        <mat-card>
+            <!--        <img-->
+            <!--            mat-card-image-->
+            <!--            src="https://material.angular.io/assets/img/examples/shiba2.jpg"-->
+            <!--            alt="Photo of a Shiba Inu"-->
+            <!--        />-->
+            <mat-card-header>
+                {{hub.name}}
+            </mat-card-header>
+            <mat-card-content>
+                <p>
+                    {{hub.description}}
+                </p>
+            </mat-card-content>
+            <mat-card-actions align="end">
+                <button mat-button (click)="showHubInfo(hub)">Hub Information</button>
+            </mat-card-actions>
+        </mat-card>
+    </div>
+</div>
