--- a/src/app/layout/old-book/old-book-detail/old-book-detail.component.html
+++ b/src/app/layout/old-book/old-book-detail/old-book-detail.component.html
@@ -55,38 +55,38 @@
             </app-bb-main-bar>
         </app-base-bar>
 
-        <div class="table-container">
-            <table mat-table [dataSource]="selectedOldBook.history" class="orders-table mat-elevation-z10">
-                <ng-container matColumnDef="uuid">
-                    <th mat-header-cell *matHeaderCellDef> Uuid</th>
-                    <td mat-cell *matCellDef="let element">
-                        <a (click)="openHistoryModel(element)" class="primary">
-                            {{element.uuid}}
-                        </a>
-                    </td>
-                </ng-container>
+<!--        <div class="table-container">-->
+<!--            <table mat-table [dataSource]="selectedOldBook.history" class="orders-table mat-elevation-z10">-->
+<!--                <ng-container matColumnDef="uuid">-->
+<!--                    <th mat-header-cell *matHeaderCellDef> Uuid</th>-->
+<!--                    <td mat-cell *matCellDef="let element">-->
+<!--                        <a (click)="openHistoryModel(element)" class="primary">-->
+<!--                            {{element.uuid}}-->
+<!--                        </a>-->
+<!--                    </td>-->
+<!--                </ng-container>-->
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="oldBookUuid">
-                    <th mat-header-cell *matHeaderCellDef>Old Book Uuid</th>
-                    <td mat-cell *matCellDef="let element"> {{element.oldBookUuid}} </td>
-                </ng-container>
+<!--                &lt;!&ndash; Name Column &ndash;&gt;-->
+<!--                <ng-container matColumnDef="oldBookUuid">-->
+<!--                    <th mat-header-cell *matHeaderCellDef>Old Book Uuid</th>-->
+<!--                    <td mat-cell *matCellDef="let element"> {{element.oldBookUuid}} </td>-->
+<!--                </ng-container>-->
 
-                <!-- Virtual Book Id Column -->
-                <ng-container matColumnDef="ownerId">
-                    <th mat-header-cell *matHeaderCellDef>Owner Uuid</th>
-                    <td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>
-                </ng-container>
+<!--                &lt;!&ndash; Virtual Book Id Column &ndash;&gt;-->
+<!--                <ng-container matColumnDef="ownerId">-->
+<!--                    <th mat-header-cell *matHeaderCellDef>Owner Uuid</th>-->
+<!--                    <td mat-cell *matCellDef="let element"> {{element.ownerId}} </td>-->
+<!--                </ng-container>-->
 
-                <ng-container matColumnDef="createdAt">
-                    <th mat-header-cell *matHeaderCellDef> Created Date</th>
-                    <td mat-cell *matCellDef="let element"> {{element.createdAt | date}} </td>
-                </ng-container>
+<!--                <ng-container matColumnDef="createdAt">-->
+<!--                    <th mat-header-cell *matHeaderCellDef> Created Date</th>-->
+<!--                    <td mat-cell *matCellDef="let element"> {{element.createdAt | date}} </td>-->
+<!--                </ng-container>-->
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+<!--                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
+<!--                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>-->
+<!--            </table>-->
 
-        </div>
+<!--        </div>-->
     </mat-card>
 </div>
