--- a/src/app/layout/old-book/old-book-list/old-book-list.component.html
+++ b/src/app/layout/old-book/old-book-list/old-book-list.component.html
@@ -8,8 +8,8 @@
 
     <mat-tab-group *ngIf="!isLoadingData">
         <mat-tab label="Available At Hub">
-            <mat-form-field floatLabel="never" class="search-box">
-                <input matInput placeholder="Search">
+            <mat-form-field floatLabel="never" class="search-box" [formGroup]="searchForm">
+                <input matInput placeholder="Search By Uuid or Name or Virtual Book Uuid" [formControlName]="'name'">
             </mat-form-field>
             <div class="table-container">
                 <table mat-table [dataSource]="dataSourceAtHub" class="orders-table mat-elevation-z10">
@@ -26,6 +26,18 @@
                     <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef>Name</th>
                         <td mat-cell *matCellDef="let element"> {{element.virtualBook.name}} </td>
+                    </ng-container>
+
+                    <!-- Condition Column -->
+                    <ng-container matColumnDef="condition">
+                        <th mat-header-cell *matHeaderCellDef>Condition</th>
+                        <td mat-cell *matCellDef="let element"> {{element.condition}} </td>
+                    </ng-container>
+
+                    <!-- Amount Column -->
+                    <ng-container matColumnDef="amount">
+                        <th mat-header-cell *matHeaderCellDef>Amount</th>
+                        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
                     </ng-container>
 
                     <!-- Virtual Book Id Column -->
@@ -47,7 +59,7 @@
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-                    <ng-template [ngIf]="dataSourceAtHub.length === 0">
+                    <ng-template [ngIf]="dataSourceAtHubRoot.length === 0">
                         <tr mat-footer-row *matFooterRowDef="['noRecord']"></tr>
                     </ng-template>
                 </table>
@@ -71,6 +83,18 @@
                     <ng-container matColumnDef="name">
                         <th mat-header-cell *matHeaderCellDef>Name</th>
                         <td mat-cell *matCellDef="let element"> {{element.virtualBook.name}} </td>
+                    </ng-container>
+
+                    <!-- Condition Column -->
+                    <ng-container matColumnDef="condition">
+                        <th mat-header-cell *matHeaderCellDef>Condition</th>
+                        <td mat-cell *matCellDef="let element"> {{element.condition}} </td>
+                    </ng-container>
+
+                    <!-- Amount Column -->
+                    <ng-container matColumnDef="amount">
+                        <th mat-header-cell *matHeaderCellDef>Amount</th>
+                        <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
                     </ng-container>
 
                     <!-- Virtual Book Id Column -->
