--- a/src/app/layout/old-book/old-book-list/old-book-list.component.scss
+++ b/src/app/layout/old-book/old-book-list/old-book-list.component.scss
@@ -1,3 +1,30 @@
 .search-box {
     margin: 15px 0px;
 }
+
+.course-panel {
+    margin-bottom: 20px;
+}
+
+.search-box {
+    width: 100%;
+    margin-bottom: 16px;
+
+    input.mat-input {
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 8px;
+        box-sizing: border-box;
+        font-size: 14px;
+
+        &:focus {
+            outline: none;
+            border-color: #007bff;
+        }
+    }
+
+    .mat-form-field-placeholder {
+        color: #555;
+    }
+}
+
