--- a/src/app/layout/hub/hub-detail/hub-detail.component.html
+++ b/src/app/layout/hub/hub-detail/hub-detail.component.html
@@ -33,3 +33,80 @@
         </div>
     </vngcls-info-container>
 </mat-card>
+<mat-card style="margin-top: 15px">
+    <div class="title">
+        Old Books Available in Hub
+    </div>
+    <div class="table-container">
+        <table mat-table [dataSource]="selectedHub.oldBook" class="mat-elevation-z8">
+            <ng-container matColumnDef="uuid">
+                <th mat-header-cell *matHeaderCellDef> Uuid</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.uuid}}
+                </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef style="width: 35%">Book Name</th>
+                <td mat-cell *matCellDef="let element">
+                    {{element.virtualBook.name}}
+                </td>
+            </ng-container>
+
+            <!-- Condition Column -->
+            <ng-container matColumnDef="condition">
+                <th mat-header-cell *matHeaderCellDef>Condition</th>
+                <td mat-cell *matCellDef="let element">
+                    <ng-container [ngTemplateOutlet]="ConditionBadge"
+                                  [ngTemplateOutletContext]="{condition: element.condition}">
+                    </ng-container>
+                </td>
+            </ng-container>
+
+            <!-- Amount Column -->
+            <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef>Amount</th>
+                <td mat-cell *matCellDef="let element">{{element.amount}} books</td>
+            </ng-container>
+
+            <!-- Point Column -->
+            <ng-container matColumnDef="point">
+                <th mat-header-cell *matHeaderCellDef>Point</th>
+                <td mat-cell *matCellDef="let element">{{element.point}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="noRecord">
+                <td mat-footer-cell *matFooterCellDef>No Old Books found.</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <ng-template [ngIf]="selectedHub.oldBook.length === 0">
+                <tr mat-footer-row *matFooterRowDef="['noRecord']"></tr>
+            </ng-template>
+        </table>
+    </div>
+</mat-card>
+
+<ng-template #ConditionBadge let-condition='condition'>
+    <app-badge *ngIf="condition == 'NEW'"
+               [type]="'success'"
+               [title]="condition"
+    ></app-badge>
+    <app-badge *ngIf="condition == 'VERY_GOOD' || condition == 'READING_QUALITY'"
+               [type]="'process'"
+               [title]="condition"
+    ></app-badge>
+
+    <app-badge *ngIf="condition == 'FAIR'"
+               [type]="'warning'"
+               [title]="condition"
+    ></app-badge>
+
+    <app-badge *ngIf="condition == 'POOR'"
+               [type]="'undetermined'"
+               [title]="condition"
+    ></app-badge>
+</ng-template>
