--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -13,7 +13,19 @@
             <a mat-list-item [routerLink]="'exchange'">
                 <span class="aligned--item aligned--item__center flex--gap__5">
                     <mat-icon>book_4</mat-icon>
-                    Exchange
+                    Exchange Order
+                </span>
+            </a>
+            <a mat-list-item [routerLink]="'book-purchased'">
+                <span class="aligned--item aligned--item__center flex--gap__5">
+                    <mat-icon>shopping_cart</mat-icon>
+                    Book Purchase Order
+                </span>
+            </a>
+            <a mat-list-item [routerLink]="'point-purchased'">
+                <span class="aligned--item aligned--item__center flex--gap__5">
+                    <mat-icon>paid</mat-icon>
+                    Point Purchase Order
                 </span>
             </a>
             <a mat-list-item [routerLink]="'books'">
@@ -30,7 +42,7 @@
             </a>
             <a mat-list-item [routerLink]="'hub'">
                 <span class="aligned--item aligned--item__center flex--gap__5">
-                    <mat-icon>hub</mat-icon>
+                    <mat-icon>store</mat-icon>
                     Hub
                 </span>
             </a>
